# cartographie

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  astar.c  astar.h  bestInFirstOut.c  bestInFirstOut.h  cartographie.c  debug.c  debug.h  exemple.c  geometrie.c  geometrie.h  main.c  massif.out.9868  obstacles.c  obstacles.h  pathfinding.c  pathfinding.h  point.c  point.h  pointList.c  pointList.h  simulation
debug/: affichage.c  affichage.h  plateau.xcf
sources/: BIFO.h  Makefile  PointPointerVector.h  a.out  astar.h  bestInFirstOut.c  bestInFirstOut.h  carto_robot  data.c  data.h  geometrie.c  geometrie.h  main.c  obstacles.c  obstacles.h  pathfinding.c  pathfinding.h  point.c  point.h  pointList.c  pointList.h
sources/Old/: BIFO.c  PointPointerVector.c  astar.c  point.c
sources/debug/: affichage.c  affichage.h
